--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "papaparse": "^5.5.3",
     "pptx-preview": "^1.0.6",
     "pptxjs": "^0.0.0",
+    "prettier": "^3.6.2",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
